Change links color

--- a/css/custom.css
+++ b/css/custom.css
@@ -44,8 +44,8 @@ body {
 }
 
 a {
-	/*color: #2c75b4;*/
-  color: #004785; /*Wharton blue*/
+	color: #2c75b4;
+  /*color: #004785; /*Wharton blue*/*/
 }
 
 /* Main Area */
