--- a/css/custom.css
+++ b/css/custom.css
@@ -76,14 +76,6 @@ a {
 	font-size: 16px;
 }
 
-/*.jumbotron p {*/
-	/*font-size: 16px*/
-/*}*/
-
-/*h1.name {
-	margin-top: -10px;
-	font-size: 40px;
-}*/
 
 
 
@@ -171,7 +163,7 @@ a {
 }
 
 .discussion {
-	padding-bottom: 10px;
+	/*padding-bottom: 10px;*/
 }
 
 
